# ikt103-C-

assignment_2_1/: CMakeLists.txt  main.cpp
assignment_3_1/: CMakeLists.txt  customers.csv  main.cpp
assignment_3_2/: CMakeLists.txt  main.cpp  student.cpp  student.h
assignment_4_1/: CMakeLists.txt  main.cpp  school.sqlite
assignment_4_1/sqlitecpp/include/SQLiteCpp/: Database.h
assignment_5_1/: CMakeLists.txt  main.cpp
